--- a/css/style.css
+++ b/css/style.css
@@ -107,27 +107,27 @@
 
 
 /* 섹션2 ~ 7 */
-#main #section2 {background:url(../img/section2.jpg) no-repeat 50% 50% fixed;background-size:cover;}
-#main #section3 {background:url(../img/section3.jpg) no-repeat 50% 50% fixed;background-size:cover;}
-#main #section4 {background:url(../img/section4.jpg) no-repeat 50% 50% fixed;background-size:cover;}
-#main #section5 {background:url(../img/section5.jpg) no-repeat 50% 50% fixed;background-size:cover;}
-#main #section6 {background:url(../img/section6.jpg) no-repeat 50% 50% fixed;background-size:cover;}
-#main #section7 {background:url(../img/section7.jpg) no-repeat 50% 50% fixed;background-size:cover;}
+#main #section2 {background:url(../img/section2.jpg) no-repeat 50% 50%;background-size:cover;}
+#main #section3 {background:url(../img/section3.jpg) no-repeat 50% 50%;background-size:cover;}
+#main #section4 {background:url(../img/section4.jpg) no-repeat 50% 50%;background-size:cover;}
+#main #section5 {background:url(../img/section5.jpg) no-repeat 50% 50%;background-size:cover;}
+#main #section6 {background:url(../img/section6.jpg) no-repeat 50% 50%;background-size:cover;}
+#main #section7 {background:url(../img/section7.jpg) no-repeat 50% 50%;background-size:cover;}
 
 
 /* 포트폴리오 공용 */
-#main .portfolio {z-index:1;position:relative;width:100%;height:auto;/* overflow:hidden; */padding:10.168156% 0;} /* 193.5px */
+#main .portfolio {z-index:1;position:relative;width:100%;height:auto;padding:10.168156% 0;} /* 193.5px */
 #main .portfolio:after {z-index:2;content:"";display:block;position:absolute;top:0;left:0;width:100%;height:100%;background:#252525;opacity:.5;}
 #main .portfolio .wrap {z-index:3;position:relative;width:100%;max-width:1570px;margin:0 auto;}
 #main .portfolio .wrap .gap {padding:0 20px;}
-#main .portfolio .wrap .gap .container {width:100%;}
-#main .portfolio .wrap .gap .container .left {float:left;color:#fff;height:100%;}
+#main .portfolio .wrap .gap .container {width:100%;height:auto;}
+#main .portfolio .wrap .gap .container .left {float:left;color:#fff;height:100%;margin-bottom:50px;}
 #main .portfolio .wrap .gap .container .left .title-wrap {width:100%;}
 #main .portfolio .wrap .gap .container .left .title-wrap .title {width:100%;}
 #main .portfolio .wrap .gap .container .left .title-wrap .title h3 {font-size:30px;font-weight:500;line-height:34px;padding-top:20px;}
 
-#main .portfolio .wrap .gap .container .left .txt-wrap {width:100%;margin-top:200px;}
-#main .portfolio .wrap .gap .container .left .s356 {width:100%;margin-top:140px;}
+#main .portfolio .wrap .gap .container .left .txt-wrap {width:100%;padding-top:150px;}
+#main .portfolio .wrap .gap .container .left .s356 {width:100%;padding-top:90px;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt {width:100%;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt h2 {font-size:60px;font-weight:600;padding-top:100px;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt p {font-size:15px;padding-top:30px;}
