--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@
   100% {opacity:0.5;}
 }
 
-#main #section1 .wrap .gap .container .content .smooth-wrap {z-index:2;position:absolute;bottom:3%;left:0;width:100%;height:48px;text-align:center;}
+#main #section1 .wrap .gap .container .content .smooth-wrap {z-index:2;position:absolute;bottom:0;left:0;width:100%;height:48px;text-align:center;}
 #main #section1 .wrap .gap .container .content .smooth-wrap a {display:inline-block;width:auto;height:100%;font-size:25px;font-weight:600;color:#fff;transition:all .3s;}
 #main #section1 .wrap .gap .container .content .smooth-wrap a i {display:block;}
 
@@ -131,6 +131,7 @@
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt {width:100%;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt h2 {font-size:60px;font-weight:600;padding-top:100px;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt p {font-size:15px;padding-top:30px;}
+#main .portfolio .wrap .gap .container .left .txt-wrap .txt p br {display:none;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt .btn-wrap {position:relative;display:block;width:154px;height:45px;padding-top:50px;}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt .btn-wrap a {overflow:hidden;z-index:1;position:relative;display:inline-block;width:100%;height:100%;border:2px solid #f5df4d;/* transition:all .5s; */}
 #main .portfolio .wrap .gap .container .left .txt-wrap .txt .btn-wrap a:before {content:'';display:block;z-index:2;position:absolute;top:0;left:-155px;width:100%;height:100%;color:#656769;background:#f5df4d;transition:all .5s;}
@@ -160,7 +161,7 @@
 #footer .content .content-gap .right-wrap {float:left;width:53%/* 840px */;}
 #footer .content .content-gap .right-wrap .row1 {width:100%;padding-bottom:10px;}
 #footer .content .content-gap .right-wrap .row1 div {width:100%;display:inline-block;border-bottom:1px solid #444;padding-bottom:17px;}
-#footer .content .content-gap .right-wrap .row1 div span {display:inline-block;margin-right:/* 25px */6.86466%;}
+#footer .content .content-gap .right-wrap .row1 div span {display:inline-block;margin-right:25px/* 6.86466% */;}
 #footer .content .content-gap .right-wrap .row1 div span:last-child {margin-right:0;}
 #footer .content .content-gap .right-wrap .row1 div span a {display:inline-block;color:#fff;font-size:14px;font-weight:500;}
 #footer .content .content-gap .right-wrap .row1 div span a img {width:100%;max-width:25px;margin-right:10px;}
