--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,7 @@
 html, body {width:100%;height:100%;}
 html {overflow-y:scroll;}  /* root  스크롤바 너비 17px  1920-17=1903 */
 html.addScroll {overflow:hidden;}
-body {font:normal 14px/1 'Montserrat','Noto Sans KR','Nanum Gothic';color:#939597;background:#fff;}
+body {font:normal 14px/1 'Montserrat','Noto Sans KR','Nanum Gothic';color:#939597;background:#f0f0f0;}
 header, main, footer, section, nav, aside, article {display:block;}
 ul, li {list-style:none;}
 a {color:#939597;text-decoration:none;}
