--- a/css/response.css
+++ b/css/response.css
@@ -4,7 +4,6 @@
 @media all and (max-width:1560px){
     #main #section2-1 .wrap .gap .container .content .right .down .main-color {margin-right:0;}
     #main #section2 .wrap .gap .container .content .right div.education {margin-right:3%;}
-
 }
 
 @media all and (max-width:1270px){
@@ -18,6 +17,22 @@
     #main #section2 .wrap .gap .container .content .left .img-wrap {display:inline-block;}
     #main #section2 .wrap .gap .container .content .left .pro-wrap {display:inline-block;margin:auto 0 auto 50px;}
     #main #section2 .wrap .gap .container .content .right {float:none;width:100%;margin:50px auto 0 auto;text-align:center;}
+
+    .work .project {padding-top:110px;}
+    .work #section6 {padding-bottom:110px;}
+
+    .work #section1 .port-wrap .prev-wrap {margin-left:30px;}
+    .work #section1 .port-wrap .next-wrap {margin-right:100px;}
+    
+    .work #section3 .wrap .gap .container .content .right p {width:90%;margin:20px auto;}
+
+    #jason #section3 .wrap .gap .container .content .left {padding:50.969px 0;}
+    #viccarbe #section3 .wrap .gap .container .content .left {padding:58.6405px 0;}
+
+    #starbucks #section3 .wrap .gap .container .content .left {padding:66.1405px 0;}
+    #brando #section3 .wrap .gap .container .content .left {padding:83.8125px 0;}
+    #hCode #section3 .wrap .gap .container .content .left {padding:121.469px 0;}
+
 }
 
 @media all and (max-width:1170px){
@@ -27,7 +42,6 @@
     #main .portfolio .wrap .gap .container .left .txt-wrap .txt h2 {padding-top:20px;}
     #main .portfolio .wrap .gap .container .left .txt-wrap .txt .btn-wrap {margin:0 auto;}
     #main .portfolio .wrap .gap .container .right {float:none;}
-
 }
 
 @media all and (max-width:1070px){
@@ -36,7 +50,6 @@
     #footer .content .content-gap .right-wrap .row1 div {width:290px/* 47.170041% */;}
     #footer .content .content-gap .right-wrap .row1 div span {display:block;margin-right:0;margin-bottom:15px;}
     #footer .content .content-gap .right-wrap .row1 div span:last-child {margin-bottom:0;}
-
 }
 
 @media all and (max-width:1000px){
@@ -45,11 +58,32 @@
 
     #main #section3 .wrap .gap .content ul li {width:33.333%;}
     #main #section3 .wrap .gap .content ul li .gap2 .box-wrap .name h3 {font-size:calc(2.1529vw*2);}
+
+    .work #section1 .port-wrap {height:60px;}
+    .work #section1 .port-wrap .prev-wrap {height:60px;}
+    .work #section1 .port-wrap .prev-wrap a {padding-left:0;text-align:right;background:url(../img/left-arrow4.png) no-repeat 0 50%;background-size:70px 30px;}
+    .work #section1 .port-wrap .next-wrap {height:60px;margin-right:30px;}
+    .work #section1 .port-wrap .next-wrap a {padding-right:0;text-align:left;background:url(../img/right-arrow4.png) no-repeat 0 50%;background-size:70px 30px;}
 }
 
 @media all and (max-width:905px){
     /* #nav .wrap .gap {margin:0;}
     #nav .wrap .gap .container > ul > li {margin:0;} */
+}
+
+@media all and (max-width:900px){
+    #main #section2-1 .wrap .gap .container .content .right .up-txt-wrap span {font-size:14px;}
+
+    .work #section3 .wrap .gap .container .content .left ul li h4 {width:100px;}
+    .work #section3 .wrap .gap .container .content .left ul li:nth-child(1) h5 {display:block;}
+    .work #section3 .wrap .gap .container .content .left ul li h5 strong br {display:block;}
+    
+    #starbucks #section3 .wrap .gap .container .content .left ul li h5 br {display:block;}
+    #vivienne #section3 .wrap .gap .container .content .left ul li h5 br {display:block;}
+
+    .work .project {padding-top:80px;}
+    .work #section6 {padding-bottom:80px;}
+    .work .project .wrap .gap .container .bImg img {margin-top:80px;}
 }
 
 @media all and (max-width:850px){
@@ -59,6 +93,11 @@
     #main #section2 .wrap .gap .container .content .right .experience {display:block;}
     #main #section2 .wrap .gap .container .content .right .edu-wrap li {text-align:center;}
     #main #section2 .wrap .gap .container .content .right div.education {text-align:center;}
+    
+    .work #section1 .port-wrap .prev-wrap {margin-left:10px;}
+    .work #section1 .port-wrap .prev-wrap a:hover {margin-left:0;}
+    .work #section1 .port-wrap .next-wrap {margin-right:10px;}
+    .work #section1 .port-wrap .next-wrap a:hover {margin-left:0;}
 }
 
 
@@ -72,8 +111,7 @@
     #main #section2-1 .wrap .gap .container .content .right .up {margin-top:50px;}
     #main #section2-1 .wrap .gap .container .content .right .down            .color-wrap li .color-name span {padding:0;}
 
-
-
+    .work #section1 .wrap .gap .container .title h2 br {display:block;}
 }
 
 @media all and (max-width:780px){
@@ -87,11 +125,48 @@
     #main #section1 .wrap .gap .container .content .section1-bg .main-title .title-wrap div span {font-size:60px;}
     #main #section1 .wrap .gap .container .content .section1-bg .main-title .title-wrap .title3 span {font-size:20px;}
 
+    #main #section2-1 .wrap .gap .container .content .right .up-txt-wrap span {text-align:center;}
     #main #section2-1 .wrap .gap .container .content .right .down .main-color {margin-right:20px;}
     #main #section2-1 .wrap .gap .container .content .right .down   .color-wrap li {display:block;}
 
     #main #section3 .wrap .gap .content ul li {width:50%;}
     #main #section3 .wrap .gap .content ul li .gap2 .box-wrap .name h3 {font-size:calc(2.1529vw*3);}
+
+    .work #section1 .wrap .gap .container .title h2 {font-size:50px;}
+    
+    .work #section2 {padding-top:80px;}
+    .work #section2 .wrap .gap .container .img-wrap {margin-top:-140px;}
+    .work #section2 .wrap .gap .container .img1 {margin-top:-25px;}
+    .work #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:120px;}
+
+    #jason #section2 .wrap .gap .container .img-wrap {margin-top:-95px;}
+    #jason #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:200px;}
+
+    #hCode #section2 .wrap .gap .container .img-wrap {margin-top:-108px;}
+    #hCode #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:180px;}
+
+    #brando #section2 .wrap .gap .container .img-wrap {margin-top:-100px;}
+    #brando #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:200px;}
+
+    #starbucks #section3 .wrap .gap .container .content .left {padding:57.172px 0;}
+    #vivienne #section3 .wrap .gap .container .content .left {padding:54.563px 0;}
+    #brando #section3 .wrap .gap .container .content .left {padding:64.563px 0;}
+    #hCode #section3 .wrap .gap .container .content .left {padding:112.75px 0;}
+    #jason #section3 .wrap .gap .container .content .left {padding:0;}
+
+    .work #section3 .wrap .gap .container .content .left ul li h5 {display:block;}
+    .work #section3 .wrap .gap .container .content .right p {font-size:13px;}
+    .work #section3 .wrap .gap .container .content .right p strong {font-size:13px;}
+
+    .work .project {padding-top:60px;}
+    .work #section6 {padding-bottom:60px;}
+    .work .project .wrap .gap .container .bImg img {margin-top:60px;}
+    .work .project .wrap .gap .container .title h3 {font-size:35px;}
+    .work .project .wrap .gap .container .title h6 i {width:79px;}
+}
+
+@media all and (max-width:700px){
+    #jason #section3 .wrap .gap .container .content .left {padding:58.547px 0;}
 }
 
 @media all and (max-width:650px){
@@ -105,16 +180,38 @@
     #main #section2-1 .wrap .gap .container .content .right .down .main-color {display:block;margin-right:0;margin-bottom:20px;}
     #main #section2-1 .wrap .gap .container .content .right .down .sub-color {display:block;}
 
-
     #footer .content .content-gap .left-wrap {float:none;width:100%;text-align:center;margin-bottom:25px;}
     #footer .content .content-gap .left-wrap h2 {width:100%;text-align:center;}
     #footer .content .content-gap .right-wrap {float:none;width:100%;text-align:center;}
+
+    .work #section3 .wrap .gap .container .content .left {float:none;width:100%;text-align:center;}
+    .work #section3 .wrap .gap .container .content .left ul li {display:inline-block;width:32.5%;text-align:center;}
+    .work #section3 .wrap .gap .container .content .left .btn-wrap {display:inline-block;padding:30px 30px 50px 30px;}
+
+    #starbucks #section3 .wrap .gap .container .content .left {padding:0;}
+    #vivienne #section3 .wrap .gap .container .content .left {padding:0;}
+    #brando #section3 .wrap .gap .container .content .left {padding:0;}
+    #hCode #section3 .wrap .gap .container .content .left {padding:0;}
+    #jason #section3 .wrap .gap .container .content .left {padding:0;}
+    #viccarbe #section3 .wrap .gap .container .content .left {padding:0;}
+
+
+    #hCode #section3 .wrap .gap .container .content .left .btn-wrap {padding:30px 10px 50px 10px;}
+    #jason #section3 .wrap .gap .container .content .left .btn-wrap {padding:30px 30px 50px 30px;}
+    #jason #section3 .wrap .gap .container .content .left .jMain {padding-bottom:0;}
+    #jason #section3 .wrap .gap .container .content .left .jSub1 {padding-bottom:0;}
+
+    .work #section3 .wrap .gap .container .content .right {float:none;width:100%;}
+
 }
 
 @media all and (max-width:600px){
     #main #section1 .wrap .gap .container .content .section1-bg .main-title {width:80%;left:120px;}
     
     #main .sec2 .wrap {border-bottom:0;}
+
+    #hCode #section3 .wrap .gap .container .content .left .btn-wrap {padding:30px 30px 0 30px;}
+    #hCode #section3 .wrap .gap .container .content .left .hSub2 {padding-bottom:50px;}
 }
 
 @media all and (max-width:530px){
@@ -140,6 +237,49 @@
     #main #section3 .wrap .gap .content ul li .gap2 .box-wrap .name h3 {font-size:calc(2.1529vw*6);}
     #main #section3 .wrap .gap .content ul li .gap2 .box-wrap .name span img {width:100%;max-width:80px;}
     #main #section3 .wrap .gap .content ul li:nth-child(2) .gap2 .box-wrap .name img {width:100%;max-width:63px;}
+    
+    .work #section1 .wrap .gap .container .title h3 {font-size:25px;}
+    .work #section1 .wrap .gap .container .title h6 {margin:10px 0;}
+    .work #section1 .wrap .gap .container .title h6 i {width:40px;}
+    .work #section1:hover .wrap .gap .container .title h6 i {width:120px;}
+    .work #section1 .wrap .gap .container .title h2 {font-size:40px;}
+        
+    .work #section1 .port-wrap .prev-wrap {margin-left:5px;}
+    .work #section1 .port-wrap .prev-wrap a {text-align:center;background:url(../img/left-arrow4.png) no-repeat 0 50%;background-size:60px 30px;}
+    .work #section1 .port-wrap .next-wrap {margin-right:0;}
+    .work #section1 .port-wrap .next-wrap a {background:url(../img/right-arrow4.png) no-repeat 0 50%;background-size:60px 30px;}
+    
+    .work #section2 {padding-top:80px;}
+    .work #section2 .wrap .gap .container .img-wrap {margin-top:-130px;}
+    .work #section2 .wrap .gap .container .img1 {margin-top:-20px;}
+    .work #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:100px;}
+
+    #jason #section2 .wrap .gap .container .img-wrap {margin-top:-93px;}
+    #jason #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:170px;}
+    #hCode #section2 .wrap .gap .container .img-wrap {margin-top:-104px;}
+    #hCode #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:150px;}
+    #brando #section2 .wrap .gap .container .img-wrap {margin-top:-97px;}
+    #brando #section2 .wrap .gap .container .img-wrap img {width:100%;max-width:170px;}
+
+    .work                                                .btn-wrap {width:135px;height:40px;}
+    .work #section3 .wrap .gap .container .content .left .btn-wrap a span {padding:9.5px 16px;}
+    .work #section3 .wrap .gap .container .content .left .btn-wrap a i {padding:9.5px 16px;}
+    .work #section3 .wrap .gap .container .content .left ul li h4 {font-size:18px;}
+    .work #section3 .wrap .gap .container .content .left ul li h5 {font-size:14px;}
+    .work #section3 .wrap .gap .container .content .left ul li h5 strong {font-size:15px;}
+    .work #section3 .wrap .gap .container .content .right h3 {font-size:25px;}
+    
+    
+    .work .project               .btn-wrap {padding-top:15px;}
+    .work .project               .btn-wrap a span {padding:9.5px 10px;}
+    .work .project               .btn-wrap a i {padding:9.5px 18px;}
+    .work .project {padding-top:40px;}
+    .work #section6 {padding-bottom:40px;}
+    .work .project .wrap .gap .container .bImg img {margin-top:40px;}
+    .work .project .wrap .gap .container .title h3 {font-size:30px;}
+    .work .project .wrap .gap .container .title h6 {margin-top:10px;}
+    .work .project .wrap .gap .container .title h6 i {width:39px;}
+    .work .project .wrap .gap .container .content h4 {font-size:20px;}
 }
 
 @media all and (max-width:480px){
@@ -148,6 +288,13 @@
 
 @media all and (max-width:450px){
     #main #section5 .wrap .gap .container .left .txt-wrap .txt p br {display:block;}
+
+    .work #section3 .wrap .gap .container .content .left ul li {display:block;width:100%;}
+    .work #section3 .wrap .gap .container .content .left .btn-wrap {display:block;margin:0 auto;}
+    #starbucks #section3 .wrap .gap .container .content .left .sMain {padding-bottom:0;}
+    #viccarbe #section3 .wrap .gap .container .content .left .vMain {padding-bottom:0;}
+    #jason #section3 .wrap .gap .container .content .left .btn-wrap {display:block;}
+    #jason #section3 .wrap .gap .container .content .left .jSub2 {padding-bottom:0;}
 }
 
 @media all and (max-width:400px){
